# clinical-guideline-pdf2md-chunking-pipeline

./: .gitignore  API_INTEGRATION_ASYNC_DOC2MD_CONVERSION.md  INSTALLATION.md  check_pytorch_hardware_acceleration.py  example_markdown_parent-child_chunking.py  example_pdf2md_conversion_async_api.py  example_pdf2md_conversion_batch_processing.py  example_pdf2md_conversion_single-doc_processing.py  gpu_diagnostics.py  ollama_qwen_image_summary_check.py  openai_image_explanation_check.py  pyproject.toml  requirements.txt  usage_example_doc2markdown.py
demonstration/chunking_demo/clinical_guidelines_markdown_examples/: 2025 AHA-ACC Hypertension Guideline.md
demonstration/chunking_demo/streamlit_demo/: launch_demo.py  parent_child_chunking_ui.py
doc2md_conversion_engine/: __init__.py  pipeline_orchestrator.py  trigger_doc_to_markdown_conversion.py
doc2md_conversion_engine/checkpointing/: __init__.py  checkpoint_resume_state_loader.py  windowed_checkpoint_file_store.py
doc2md_conversion_engine/contracts/: __init__.py  assembly_interfaces.py  exceptions.py
doc2md_conversion_engine/contracts/configurations/: docling_engine_config.py  pipeline_config.py
doc2md_conversion_engine/engine/: content_extractor.py  document_processor.py
doc2md_conversion_engine/engine/figure_summarization_agent/: .env.example  agent.py
doc2md_conversion_engine/engine/transformers/: __init__.py  markdown_builder.py
doc2md_conversion_engine/engine_bootstrap/: __init__.py  mineru_backend_ladder.py
doc2md_conversion_engine/entrypoints/: convert_document_to_markdown_cli.py
doc2md_conversion_engine/exceptions/: __init__.py  base.py  config.py  processing.py  validation.py
doc2md_conversion_engine/fault_tolerance/: circuit_breaker.py  timeout_guard.py
doc2md_conversion_engine/file_upload_management/: __init__.py  document_upload_intake.py  uploaded_document_staging_store.py
doc2md_conversion_engine/gpu_resource_management/: __init__.py  gpu_vram_usage_monitor.py
doc2md_conversion_engine/models/: __init__.py  accelerator.py  config.py  document.py
doc2md_conversion_engine/observability/: __init__.py  per_page_conversion_event_logger.py  structured_pipeline_logger.py
doc2md_conversion_engine/orchestration/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  batch_processor.py  orchestration_client.py  task_manager.py
doc2md_conversion_engine/orchestration/adapters/: __init__.py  asynchronous_processor.py  synchronous_processor.py
doc2md_conversion_engine/orchestration/configuration/: __init__.py  batch_configuration.py  orchestration_settings.py
doc2md_conversion_engine/orchestration/examples/: example_async_api.py  example_client_usage.py  example_simple_api.py
doc2md_conversion_engine/orchestration/metrics/: __init__.py  performance_tracker.py
doc2md_conversion_engine/orchestration/models/: __init__.py  processing_task.py  task_status.py
doc2md_conversion_engine/orchestration/resilience/: __init__.py  circuit_breaker.py  resource_pool.py  retry_handler.py
doc2md_conversion_engine/src/: pipeline_orchestrator.py  settings.yaml
doc2md_conversion_engine/src/checkpointing/: CHECKPOINTING_DESIGN.md
doc2md_conversion_engine/src/contracts/: __init__.py  conversion_engine_interface.py  document_format_constants.py  exceptions.py  figure_summarization_interfaces.py  figure_summarization_types.py  pipeline_domain_types.py  windowed_checkpoint_store_interface.py
doc2md_conversion_engine/src/engine_bootstrap/: docling_engine_bootstrap.py  engine_bootstrap_interface.py  engine_bootstrap_selector.py  mineru_engine_bootstrap.py  model_provisioning_runner.py
doc2md_conversion_engine/src/entrypoints/: convert_document_to_markdown_cli.py
doc2md_conversion_engine/src/fault_tolerance/: __init__.py  exception_resolver.py  retry_policy.py  timeout_guard.py
doc2md_conversion_engine/src/file_upload_management/: document_upload_intake.py
doc2md_conversion_engine/src/gpu_resource_management/: README.md  exclusive_gpu_context_manager.py  gpu_vram_usage_monitor.py
doc2md_conversion_engine/src/observability/: pipeline_health_status_reporter.py  pipeline_metrics_registry.py
doc2md_conversion_engine/src/stage1_document_prescanning/: STAGE_1_GUIDE.md  TODO  __init__.py  document_complexity_classifier.py  document_page_structure_scanner.py  document_sha256_hasher.py
doc2md_conversion_engine/src/stage2_page_extraction/: STAGE_2_PLAN.md  __init__.py
doc2md_conversion_engine/src/stage3_figure_summarization/: STAGE_3.md  __init__.py  async_bounded_figure_queue.py  figure_summarization_orchestrator.py  figure_summarization_worker_pool.py  figure_summary_store.py  openai_vision_client.py
doc2md_conversion_engine/src/stage4_assembly_and_output/: STAGE_4.md  __init__.py  atomic_markdown_output_flusher.py  conversion_summary_builder.py  figure_token_resolver.py  ordered_page_stream_consumer.py  streaming_document_assembler.py  table_fragment_buffer.py  token_substitution_pipeline.py
doc2md_conversion_engine/stage2_page_extraction/: __init__.py
doc2md_conversion_engine/stage3_figure_summarization/: figure_sha256_deduplication_cache.py  figure_summarization_orchestrator.py  figure_summarization_prompt.py  local_vision_concurrency_limiter.py  ollama_vision_client.py
doc2md_conversion_engine/stage4_assembly_and_output/: STAGE_4.md  assembled_markdown_output_cleaner.py  table_token_resolver.py  token_substitution_engine.py
doc2md_conversion_engine/utils/: __init__.py  file_utils.py  gpu_utils.py  progress.py  text_utils.py  validation.py
documentation/: stage1_prescanning_preparedness.md
parent_child_document_chunker/: README.md  __init__.py
parent_child_document_chunker/engine/: __init__.py  chunking_processor.py  markdown_parser.py
parent_child_document_chunker/exceptions/: __init__.py  base_exceptions.py  processing_exceptions.py
parent_child_document_chunker/schema/: __init__.py  configuration.py  document_chunks.py
parent_child_document_chunker/utilities/: __init__.py  file_operations.py  progress_tracking.py
(+60 files in other folders)
